added css styling to home

--- a/client/recipedia/public/index.html
+++ b/client/recipedia/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300&family=Playfair+Display+SC&family=Raleway+Dots&family=Raleway:wght@200&family=Syncopate:wght@700&display=swap" rel="stylesheet">
     <title>Recipedia</title>
   </head>
   <body>
